# redditresearcher

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  Reddit Top Posts + Full Content + Comments Scraper-2.0.user.js  SKILLS.md  SOUL.md  pyproject.toml
research/: README.md
research/briefs/: TEMPLATE.md  first-run.md
scripts/: merge_tampermonkey_exports.py
src/reddit_pain_agent/: __init__.py  artifact_store.py  clustering.py  config.py  llm.py  main.py  memo_writer.py  models.py  pain_analysis.py  playwright_capture.py  prompts.py  ranking.py  reddit_client.py  reply_writer.py  retrieval.py
templates/: final_memo.md  research_brief.md
tests/: test_retrieval_slice.py  test_scaffold.py
