[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-pain-agent"
version = "0.1.0"
description = "CLI-first Reddit pain research agent scaffold."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Calvin" }
]
dependencies = [
  "httpx>=0.28,<0.29",
  "pydantic>=2.12,<3",
]

[project.scripts]
reddit-pain = "reddit_pain_agent.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
